@@ -1281,39 +1281,6 @@ name|getPathInfo
 argument_list|()
 expr_stmt|;
 block|}
-if|if
-condition|(
-name|solrDispatchFilter
-operator|.
-name|pathPrefix
-operator|!=
-literal|null
-operator|&&
-name|path
-operator|.
-name|startsWith
-argument_list|(
-name|solrDispatchFilter
-operator|.
-name|pathPrefix
-argument_list|)
-condition|)
-block|{
-name|path
-operator|=
-name|path
-operator|.
-name|substring
-argument_list|(
-name|solrDispatchFilter
-operator|.
-name|pathPrefix
-operator|.
-name|length
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
 comment|// check for management path
 name|String
 name|alternate
