@@ -448,18 +448,6 @@ argument_list|)
 expr_stmt|;
 try|try
 block|{
-comment|// web.xml configuration
-name|this
-operator|.
-name|pathPrefix
-operator|=
-name|config
-operator|.
-name|getInitParameter
-argument_list|(
-literal|"path-prefix"
-argument_list|)
-expr_stmt|;
 name|Properties
 name|extraProperties
 init|=
@@ -1058,36 +1046,6 @@ name|destroy
 argument_list|()
 expr_stmt|;
 block|}
-block|}
-comment|// TODO: Clean up - we don't need this anymore.
-comment|//---------------------------------------------------------------------
-comment|//---------------------------------------------------------------------
-comment|/**    * Set the prefix for all paths.  This is useful if you want to apply the    * filter to something other then /*, perhaps because you are merging this    * filter into a larger web application.    *    * For example, if web.xml specifies:    *<pre class="prettyprint">    * {@code    *<filter-mapping>    *<filter-name>SolrRequestFilter</filter-name>    *<url-pattern>/xxx/*</url-pattern>    *</filter-mapping>}    *</pre>    *    * Make sure to set the PathPrefix to "/xxx" either with this function    * or in web.xml.    *    *<pre class="prettyprint">    * {@code    *<init-param>    *<param-name>path-prefix</param-name>    *<param-value>/xxx</param-value>    *</init-param>}    *</pre>    */
-DECL|method|setPathPrefix
-specifier|public
-name|void
-name|setPathPrefix
-parameter_list|(
-name|String
-name|pathPrefix
-parameter_list|)
-block|{
-name|this
-operator|.
-name|pathPrefix
-operator|=
-name|pathPrefix
-expr_stmt|;
-block|}
-DECL|method|getPathPrefix
-specifier|public
-name|String
-name|getPathPrefix
-parameter_list|()
-block|{
-return|return
-name|pathPrefix
-return|;
 block|}
 block|}
 end_class
